Battle with fastapi over

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,55 @@
-greenlet==3.2.3
-joblib==1.5.1
-numpy==2.3.1
-pandas==2.3.0
-playwright==1.52.0
-pyee==13.0.0
-python-dateutil==2.9.0.post0
-pytz==2025.2
-scikit-learn==1.7.0
-scipy==1.16.0
-six==1.17.0
-threadpoolctl==3.6.0
-typing_extensions==4.14.0
-tzdata==2025.2
+annotated-types
+anyio
+beautifulsoup4
+cachetools
+certifi
+charset-normalizer
+click
+colorama
+dotenv
+fastapi
+google
+google-ai-generativelanguage
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-generativeai
+googleapis-common-protos
+greenlet
+grpcio
+grpcio-status
+h11
+httplib2
+idna
+joblib
+numpy>=1.25  # Safe range; avoids future issues
+pandas>=2.1  # Avoid experimental releases
+playwright==1.52.0  # keep pinned
+proto-plus
+protobuf
+pyasn1
+pyasn1_modules
+pydantic==2.11.7  # keep pinned due to version breakage
+pydantic_core
+pyee
+pyparsing
+python-dateutil
+python-dotenv
+pytz
+requests
+rsa
+scikit-learn
+scipy>=1.9,<1.12  # your scipy 1.16 is too old; adjust as needed
+six
+sniffio
+soupsieve
+starlette
+threadpoolctl
+tqdm
+typing-inspection
+typing_extensions
+tzdata
+uritemplate
+urllib3
+uvicorn
